<resources>
    <string name="app_name">ProyectoFinalGrado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact</string>
    <string name="textViewFullName">Full Name:</string>
    <string name="editTextPersonFullName">Full name</string>
    <string name="textViewEmail">Email:</string>
    <string name="editTextEmailAddress">Email Address</string>
    <string name="editTextDescripcion">Problem description</string>
    <string name="buttonSubmit">Submit</string>
    <string name="textViewUserFullName">Place User Full Name</string>
    <string name="imageViewUserProfilePic">User Profile Pic</string>
    <string name="textViewUserBiography">Place User Biography</string>
    <string name="buttonEditProfile">Edit Profile</string>
    <string name="textViewUserEmail">Email:</string>
    <string name="textViewConfirmPassword">Confirm Password:</string>
    <string name="textViewUserPassword">Password:</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonLogin">Login</string>
    <string name="textViewNotRegistered">Not registered yet? Create an account</string>
    <string name="imageViewSplashLogo">App Logo</string>
    <string name="textViewSplashAppName">SeekBack</string>
</resources>